--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,8 @@
   "type": "module",
   "main": "app.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
